...
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollView_fragmentProfile"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".view.Registro">
    <LinearLayout
        android:id="@+id/ly_fragmentProfile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <LinearLayout
            android:id="@+id/ly_id_cabeceraProfile"
            android:layout_width="match_parent"
...
                android:layout_marginTop="10dp"
                android:text="@string/nameUser"
                android:textSize="15sp"
                android:layout_marginStart="20dp" />

            <EditText
                android:id="@+id/et_id_nombre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="10dp"
                android:inputType="text" />
...
                android:gravity="center"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/et_id_edad"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="33"
                    android:gravity="center"
                    android:inputType="number"/>

                <EditText
                    android:id="@+id/et_id_estatura"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:gravity="center"
                    android:layout_weight="33"/>

                <EditText
                    android:id="@+id/et_id_peso"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="33"
                    android:gravity="center"
                    android:inputType="number"/>
            </LinearLayout>
...
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginBottom="10dp"
                    android:layout_marginTop="10dp">

                    <RadioButton
                        android:id="@+id/rb_id_rapida"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:checked="false"
                        android:text="@string/rb_txt_Rápida"
                        android:textColor="@color/colorPrimaryDark"
                        android:textStyle="bold" />
...
                        android:textStyle="bold" />

                </RadioGroup>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ly_dm1_3_fragmentProfile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:orientation="vertical">

...
                    android:orientation="horizontal"
                    android:paddingLeft="20dp"
                    android:paddingRight="20dp"
                    android:weightSum="100">

                    <EditText
                        android:id="@+id/et_udsBasal"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="30"
                        android:ems="5"
                        android:gravity="center"
                        android:inputType="number" />

                    <EditText
                        android:id="@+id/et_udsRapida"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:layout_weight="30"
                        android:ems="5"
                        android:gravity="center"
...
                    android:layout_gravity="center"
                    android:layout_marginBottom="10dp"
                    android:layout_marginTop="10dp"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/rb_id_cero"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:checked="false"
                        android:paddingRight="10dp"
                        android:text="@string/decimal_bc_cero"
                        android:textColor="@color/colorPrimaryDark"
...
                        android:text="@string/decimal_bc_dos"
                        android:textColor="@color/colorPrimaryDark"
                        android:textStyle="bold"
                        android:paddingEnd="10dp" />

                    <RadioButton
                        android:id="@+id/rb_id_dos"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:checked="false"
                        android:paddingRight="10dp"
                        android:text="@string/decimal_bc_tres"
                        android:textColor="@color/colorPrimaryDark"
                        android:textStyle="bold" />
                </RadioGroup>

            </LinearLayout>
        </LinearLayout>
        <Button
            android:id="@+id/bt_guardar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/btn_save_registro"
...
