...
    <string name="h_max">máx.(mg/dl)</string>
    <string name="tv_txt_insulina">Insulina del bolo</string>
    <string name="rb_txt_Rápida">Rápida</string>
    <string name="rb_txt_UltraRápida">Ultrarrápida</string>
    <string name="tv_txt_uds">Unidades de insulina</string>
    <string name="bt_guardar">Guardar</string>
    <string name="minmax_incorrecto">Introduce valores min y max de glucemia entre los valores indicados</string>
    <string name="minmax_orden">El valor min de glucemia no puedes ser mayor que el valor máximo</string>
    <string name="textfieldEmpty">Rellene todos los campos</string>
    <string name="noRadioButtonsChecked">Algún elemento sin seleccionar</string>

    <!--- SharedPreferences -->
    <string name="primeraEjecucion">primeraEjecucion</string>
    <string name="nombre">nombre</string>
    <string name="edad">edad</string>
    <string name="estatura">estatura</string>
...
